configure_file(setup.py.cmake ${CMAKE_CURRENT_BINARY_DIR}/setup.py)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/setup.py  DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR} COMPONENT libsbmlnetworkeditor_python_bindings)
install(FILES __init__.py DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetworkeditor COMPONENT libsbmlnetworkeditor_python_bindings)
install(FILES sbmlnetworkeditor.py DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetworkeditor COMPONENT libsbmlnetworkeditor_python_bindings)
install(TARGETS binding_python_lib DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetworkeditor 	COMPONENT libsbmlnetworkeditor_python_bindings)
install(CODE "execute_process(COMMAND \"${CMAKE_COMMAND}\" -E chdir ${PYTHON_PACKAGE_INSTALL_DIR} pip install .)" COMPONENT python_extra)
if (WIN32)
    include(InstallRequiredSystemLibraries)
    install(PROGRAMS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetworkeditor COMPONENT libsbmlnetworkeditor_python_bindings)
    install(FILES ${LIBSBML_DLLS} DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetworkeditor COMPONENT libsbmlnetworkeditor_python_bindings)
elseif (UNIX)
    install(DIRECTORY ${CMAKE_INSTALL_PREFIX}/lib/dependencies DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetworkeditor COMPONENT libsbmlnetworkeditor_python_bindings)
endif ()