configure_file(${CMAKE_CURRENT_SOURCE_DIR}/requirements.txt.cmake ${CMAKE_CURRENT_BINARY_DIR}/requirements.txt)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/version.txt.cmake ${CMAKE_CURRENT_BINARY_DIR}/VERSION.txt)
list(APPEND SBMLNETWORK_FILES ${CMAKE_CURRENT_BINARY_DIR}/VERSION.txt)
list(APPEND SBMLNETWORK_FILES ${CMAKE_CURRENT_BINARY_DIR}/requirements.txt)
list(APPEND SBMLNETWORK_FILES ${CMAKE_CURRENT_SOURCE_DIR}/setup.py)
list(APPEND SBMLNETWORK_FILES ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
list(APPEND SBMLNETWORK_FILES ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE)
list(APPEND SBMLNETWORK_FILES ${CMAKE_CURRENT_SOURCE_DIR}/.gitignore)
list(APPEND SBMLNETWORK_FILES ${CMAKE_CURRENT_SOURCE_DIR}/pyproject.toml)
install(FILES ${SBMLNETWORK_FILES} DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetwork COMPONENT libsbmlnetwork_python_bindings)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetwork)