configure_file(${CMAKE_CURRENT_SOURCE_DIR}/requirements.txt.cmake ${CMAKE_CURRENT_BINARY_DIR}/requirements.txt)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/VERSION.txt.cmake ${CMAKE_CURRENT_BINARY_DIR}/VERSION.txt)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/sbmlnetwork/__init__.py.cmake ${CMAKE_CURRENT_BINARY_DIR}/src/sbmlnetwork/__init__.py)
list(APPEND SBMLNETWORK_MAIN_DIRECTORY_FILES ${CMAKE_CURRENT_BINARY_DIR}/VERSION.txt)
list(APPEND SBMLNETWORK_MAIN_DIRECTORY_FILES ${CMAKE_CURRENT_BINARY_DIR}/requirements.txt)
list(APPEND SBMLNETWORK_MAIN_DIRECTORY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/setup.py)
list(APPEND SBMLNETWORK_MAIN_DIRECTORY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
list(APPEND SBMLNETWORK_MAIN_DIRECTORY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE)
list(APPEND SBMLNETWORK_MAIN_DIRECTORY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/.gitignore)
list(APPEND SBMLNETWORK_MAIN_DIRECTORY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/pyproject.toml)
install(FILES ${SBMLNETWORK_MAIN_DIRECTORY_FILES} DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetwork COMPONENT libsbmlnetwork_python_bindings)
list(APPEND SBMLNETWORK_SRC_DIRECTORY_FILES ${CMAKE_CURRENT_BINARY_DIR}/src/sbmlnetwork/__init__.py)
list(APPEND SBMLNETWORK_SRC_DIRECTORY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/sbmlnetwork/sbmlnetwork.py)
install(FILES ${SBMLNETWORK_SRC_DIRECTORY_FILES} DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/sbmlnetwork/src/sbmlnetwork COMPONENT libsbmlnetwork_python_bindings)